--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -296,48 +296,6 @@
             </div>
 
             <!--Grid row-->
-            <div class="row wow fadeIn" id="main_panel">
-
-                <!--Grid column-->
-                <div class="col-md-12 mb-4 align-content-center" id="main_panel_col1">
-
-                    <!--Card-->
-                    <div class="card text-center" style="background-image: url({{ url_for('static', filename='img/bg.jpeg') }})">
-
-                        <!--Card content-->
-                        <div class="card-body">
-                            <div class="s006">
-                                  <form >
-                                    <fieldset>
-                                      <legend>What are you looking for?</legend>
-                                      <div class="inner-form">
-                                        <div class="input-field">
-                                          <button class="btn-search" type="button">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                                              <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
-                                            </svg>
-                                          </button>
-                                          <input id="search" type="text" placeholder="Type your query" value="" aria-label="Search"/>
-                                        </div>
-                                      </div>
-                                      <h6> Common search:</h6>
-                                      <div class="suggestion-wrap">
-                                        <span>Asthma</span>
-                                        <span>Depression</span>
-                                        <span>Heart Disease</span>
-                                        <span>Lung Cancer</span>
-                                      </div>
-                                    </fieldset>
-                                  </form>
-                                </div>
-                            </div>
-                        </div>
-                    <!--/.Card-->
-                </div>
-                <!--Grid column-->
-            </div>
-
-            <!--Grid row-->
             <div class="row wow fadeIn" style="display:none" id="summary_panel">
 
                 <!--Grid column-->
@@ -434,6 +392,7 @@
     <script type="text/javascript">
         // Animations initialization
         new WOW().init();
+        loaded_dashboard();
     </script>
 
 </body>
