fix refreshing phenotype form

--- a/FlaskApp/templates/dashboard.html
+++ b/FlaskApp/templates/dashboard.html
@@ -44,7 +44,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link waves-effect" data-toggle="modal" data-target="#addPhenotypeModal">Add
+                            <a class="nav-link waves-effect" id="add_phenotype" data-toggle="modal" data-target="#addPhenotypeModal">Add
                                 Phenotype</a>
                         </li>
                         <li class="nav-item">
